--- a/Interactive-rating-component.html
+++ b/Interactive-rating-component.html
@@ -30,7 +30,7 @@
                 <button class="input-button" data-score="5"><span class="button-text">5</span></button>    
             </div>
             <div class="submit-wrap">
-                <button class="submit-button">SUBMIT</button>
+                <button class="submit-button"><span class="submit-text">SUBMIT</span></button>
             </div>
         </main>
         <script src="./scripts/interactive-rating-component.js"></script>
