Mobile Reactive Display

--- a/Interactive-rating-component.html
+++ b/Interactive-rating-component.html
@@ -11,7 +11,7 @@
         <main class="main-container">
             <div class="star-container">
                 <button class="star-button">
-                    <img class="star" src="images/icon-star.svg"/>
+                    <img class="star" src="images/icon-star.svg" draggable="false"/>
                 </button>
             </div>
             <div class="title-container">
